# Finix_Plux

./: AudioController.cpp  AudioController.h  AudioEffect.cpp  AudioEffect.h  AudioException.h  AudioUtils.h  CMakeLists.txt  Cache.h  CircularBuffer.h  EqualizerPanel.qml  LibraryModel.cpp  LibraryModel.h  LibraryView.qml  MAIN_TEST.QML  Main.qml  MusicLibrary.cpp  MusicLibrary.h  Playlist.cpp  Playlist.h  PlaylistManager.cpp  PlaylistManager.h  README.md  RecommendationManager.cpp  RecommendationManager.h  Track.cpp  Track.h  asset.qrc  main.cpp  main.qml  resources.qrc  test.qml
.github/workflows/: build.yml
